# SAQ_C

./: CMakeLists.txt  README.md  cluster.h  data_quantizer.h  encoder.h  encoder_example.c  estimator.c  estimator.h  estimator_easy.h  estimator_easy_example.c  estimator_easy_zero_centroid_example.c  estimator_example.c  ivf_ann_test.c  native_check.h  quantizer.h  quantizer_example.c  query_quantizer.h  rotator.h  rotator_example.c
data/: README.md
perf/: u8u8_perf.c
